--- a/src/app/lk/lk.component.html
+++ b/src/app/lk/lk.component.html
@@ -3,3 +3,4 @@
 <app-admin *ngIf="currentRole == 'ADMIN'"></app-admin>
 <app-operator *ngIf="currentRole == 'OPERATOR'"></app-operator>
 <app-user *ngIf="currentRole == 'USER'"></app-user>
+<div *ngIf="currentRole == ''">Oooops</div>
