improved operator's search functions

--- a/src/app/common/login/login.component.html
+++ b/src/app/common/login/login.component.html
@@ -1,8 +1,6 @@
-<p>login works!</p>
-
 
 <div>
-  <input type="text" [(ngModel)]="login">
-  <input type="text" [(ngModel)]="password">
+  <input type="text" [(ngModel)]="login" placeholder="login"><br>
+  <input type="text" [(ngModel)]="password" placeholder="password">
   <button (click)="sendAuthRequest()">Login</button>
 </div>
