--- a/src/app/lk/lk.component.html
+++ b/src/app/lk/lk.component.html
@@ -1,4 +1,4 @@
-<p>lk works!</p><br>
+<p>Hello, {{login}}!</p><br>
 
 <app-admin *ngIf="currentRole == 'ADMIN'"></app-admin>
 <app-operator *ngIf="currentRole == 'OPERATOR'"></app-operator>
