--- a/src/app/lk/user/user.component.html
+++ b/src/app/lk/user/user.component.html
@@ -1,4 +1,4 @@
-<p>user works!</p>
+<p>user role</p>
 
 <h1>My statements</h1><br>
 <button (click)="createStatement()">Create new statement</button>
