added symbol <-> between chars in operator module

--- a/src/app/lk/operator/operator.component.html
+++ b/src/app/lk/operator/operator.component.html
@@ -46,5 +46,5 @@
     <td width="400px">Content</td>
   </tr>
   <td type="text" >{{chosenComponent.title}}</td>
-  <td type="text" >{{chosenComponent.content}}</td>
+  <td type="text" >{{chosenComponent.content.split("").join("-")}}</td>
 </table>
